[package]
name = "p2p"
version = "0.1.0"
authors = ["actuday6418 <actuday6418@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
magic-crypt = "3.1.6"
